# MHASS

./: LICENSE  README.md  install_dependencies.sh  pyproject.toml  setup.py
Test-data_ATCC_16S_MSA-1003/: amplicon_labels.txt  amplicons.fa  barcodes.tsv  genome_abunds.tsv  genome_labels.tsv  primers.txt
conda/: meta.yaml
mhass/: Fit_I-V_NB.R  __init__.py  fastq_combiner.py  get_counts.R  main.py  pbsim_runner.py  template_creator.py
